--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a student looking to further my education in software developement.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Taylor, Michigan.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to read and write in my free time and also play sports. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Honestly any job that I could potentially support a family with.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Everett, Washington</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I believe there is a lot of potential for growth in being a web developer and I have a strong interest in web developement.</p>
     </section>
 
     <footer id="footer">
